--- a/src/main/g8/conf/riff-raff.yaml
+++ b/src/main/g8/conf/riff-raff.yaml
@@ -7,7 +7,7 @@ deployments:
     type: autoscaling
     parameters:
       bucket: $stack_name_prefix$-dist
-  bard-ami-update:
+  $name$-ami-update:
     type: ami-cloudformation-parameter
     parameters:
       amiTags:
