Tooling code tidy up.
 - Remove desired capacity from cloudformation.
 - Make ami update task depend on autoscaling deploy task in riff-raff.yaml.

--- a/src/main/g8/conf/riff-raff.yaml
+++ b/src/main/g8/conf/riff-raff.yaml
@@ -17,3 +17,4 @@ deployments:
       prependStackToCloudFormationStackName: false
       appendStageToCloudFormationStackName: true
       cloudFormationStackByTags: false
+    dependencies: [$name$]
